--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,19 +1,14 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
-trigger:
-- master
-
 pool:
-  vmImage: 'Ubuntu-16.04'
+  vmImage: 'windows-2019'
 
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
 - script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+    npm install abaplint -g
+  displayName: 'ABAPLint Install'
+- script: |
+    abaplint --version
+    abaplint -f standard --outformat junit --outfile report.xml "src/*.*"
+  displayName: 'ABAPLint Version'
+- script: |
+    abaplint -f standard --outformat junit --outfile report.xml "src/*.*"
+  displayName: 'ABAPLint Run'
